Migrate some unit tests that are using jMock to JUnit Jupiter